--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.18.0",
-    "dotenv": "^16.3.1"
+    "openai": "^4.18.0"
   }
 }
-
